2006-10-18  Roland McGrath  <roland@redhat.com>

	PR 2727
	* configure.ac (elfutils build): Pass --prefix and --exec-prefix
	options to elfutils configure.
	(elfutils_abs_srcdir): New substituted variable.
	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New variable.
	* configure, config.in, Makefile.in: Regenerated.

2006-10-16  Li Guanglei <guanglei@cn.ibm.com>

	* configure.ac: add the checking for mysql_config,
	mysqlclient library and header files
	* runtime/lket/b2a/Makefile.am: set compile flags
	according to the existance of mysql_config
	* Makefile.in, configure, testsuite/Makefile.in,
	runtime/lket/b2a/Makefile.in: regenerated

2006-10-12  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (emit_common_header): Add a
	kretprobe_instance pointer to struct context.
	(emit_symbol_data): Include absolute symbols.

	* tapsets.cxx (emit_common_header): Initialize
	the kprobe instance pointer to 0;
	(emit_probe_entries): Set kretprobe instance
	pointer if appropriate.


2006-10-11  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (in_kprobes_function): New function that looks up
	the values of '__kprobes_text_start' and '__kprobes_text_end' in
	the kernel to be able to automatically exclude functions marked as
	'__kprobes' (BZ# 2639).
	(blacklisted_p): Calls in_kprobes_function().
	(query_kernel_module): Utility function that finds the kernel module.
	* session.h (struct systemtap_session): Added kprobes_text
	variables - kprobes_text_initialized, kprobes_text_start, and
	kprobes_text_end.
	* elaborate.cxx (systemtap_session::systemtap_session):
	kprobes_text variables get initialized.

2006-10-10  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in (elfutils_version): Require 0.124 now.

2006-10-10  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Override incomplete mysql checking for now.
	* configure: Regenerated.

2006-10-10  Li Guanglei <guanglei@cn.ibm.com>

	* configure.ac: add the checking of mysql client library