@@ -1,3 +1,9 @@
+2006-10-23  Li Guanglei <guanglei@cn.ibm.com>
+	* configure.ac, Makefile.am: add lket-b2a.1.in
+	* Makefile.in, configure: regenreated
+	* ket-b2a.1.in: new man page for lket-b2a
+	* lket.5.in: document signal trace hooks
+
 2006-10-18  Roland McGrath  <roland@redhat.com>
 
 	PR 2727
